--- a/css/mithril-slideshow.css
+++ b/css/mithril-slideshow.css
@@ -12,11 +12,8 @@ body {
 h1,
 h2,
 h3 {
-  text-align: center;
-  font-weight: 100;
-}
-.left {
   text-align: left;
+  font-weight: 100;
 }
 h1,
 h2,
@@ -41,6 +38,9 @@ ul {
 li {
   margin-bottom: 42pt;
 }
+p {
+  text-align: left;
+}
 pre {
   font-size: 24pt;
   text-align: left;
@@ -60,13 +60,21 @@ a {
   -webkit-transform: translate(0, -50%);
   -moz-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
-  text-align: center;
 }
 #objects > :first-child {
   margin-top: 0;
 }
 #objects > :last-child {
   margin-bottom: 0;
+}
+/**
+ * Default slide style
+ */
+.slide-b h1,
+.slide-b h2,
+.slide-b h3,
+.slide-b p {
+  text-align: center;
 }
 /**
  * Default slide theme
