--- a/src/less/html-slideshow.less
+++ b/src/less/html-slideshow.less
@@ -25,7 +25,7 @@ h1,
 h2,
 h3,
 img {
-    margin: 0 0 24pt 0;
+    /* margin: 0 0 24pt 0; */
 }
 
 h1 {
@@ -256,7 +256,6 @@ figcaption {
 
 
 
-
 /**
  * Default slide style, applied individually to each slide
  */
@@ -309,4 +308,16 @@ blockquote {
     font-size: 0.6em;
     border-top: 1px solid #999;
     padding-top: 0.5em;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+figure {
+    margin: 0;
 }
